# ChangeLog for dev-db/postgresql-docs
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-docs/ChangeLog,v 1.250 2014/11/03 15:24:27 titanofold Exp $

  03 Nov 2014; Aaron W. Swenson <titanofold@gentoo.org>
  -postgresql-docs-8.4.20.ebuild, -postgresql-docs-8.4.21.ebuild,
  -postgresql-docs-8.4.22.ebuild:
  Remove EOL versions.

*postgresql-docs-9.4_beta3 (10 Oct 2014)

  10 Oct 2014; Patrick Lauer <patrick@gentoo.org>
  +postgresql-docs-9.4_beta3.ebuild:
  Bump

  19 Sep 2014; Agostino Sarubbo <ago@gentoo.org> -postgresql-docs-9.0.16.ebuild,
  -postgresql-docs-9.0.17.ebuild, -postgresql-docs-9.1.12.ebuild,
  -postgresql-docs-9.1.13.ebuild, -postgresql-docs-9.2.7.ebuild,
  -postgresql-docs-9.2.8.ebuild, -postgresql-docs-9.3.3.ebuild,
  -postgresql-docs-9.3.4.ebuild:
  Remove old

  19 Sep 2014; Agostino Sarubbo <ago@gentoo.org> postgresql-docs-9.0.18.ebuild,
  postgresql-docs-9.1.14.ebuild, postgresql-docs-9.2.9.ebuild,
  postgresql-docs-9.3.5.ebuild:
  Stable for arm, wrt bug #522184

  17 Sep 2014; Agostino Sarubbo <ago@gentoo.org> postgresql-docs-9.0.18.ebuild,
  postgresql-docs-9.1.14.ebuild, postgresql-docs-9.2.9.ebuild,
  postgresql-docs-9.3.5.ebuild:
  Stable for sparc, wrt bug #522184

  13 Sep 2014; Agostino Sarubbo <ago@gentoo.org> postgresql-docs-9.0.18.ebuild,
  postgresql-docs-9.1.14.ebuild, postgresql-docs-9.2.9.ebuild,
  postgresql-docs-9.3.5.ebuild:
  Stable for ia64, wrt bug #522184

  13 Sep 2014; Agostino Sarubbo <ago@gentoo.org> postgresql-docs-9.0.18.ebuild,
  postgresql-docs-9.1.14.ebuild, postgresql-docs-9.2.9.ebuild,
  postgresql-docs-9.3.5.ebuild:
  Stable for alpha, wrt bug #522184

  10 Sep 2014; Agostino Sarubbo <ago@gentoo.org> postgresql-docs-9.0.18.ebuild,
  postgresql-docs-9.1.14.ebuild, postgresql-docs-9.2.9.ebuild,
  postgresql-docs-9.3.5.ebuild:
  Stable for ppc64, wrt bug #522184

  10 Sep 2014; Agostino Sarubbo <ago@gentoo.org> postgresql-docs-9.0.18.ebuild,