@@ -1,6 +1,12 @@
 # ChangeLog for dev-db/postgresql-docs
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-docs/ChangeLog,v 1.250 2014/11/03 15:24:27 titanofold Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-docs/ChangeLog,v 1.251 2014/11/21 05:47:30 patrick Exp $
+
+*postgresql-docs-9.4_rc1 (21 Nov 2014)
+
+  21 Nov 2014; Patrick Lauer <patrick@gentoo.org>
+  +postgresql-docs-9.4_rc1.ebuild:
+  Bump
 
   03 Nov 2014; Aaron W. Swenson <titanofold@gentoo.org>
   -postgresql-docs-8.4.20.ebuild, -postgresql-docs-8.4.21.ebuild,
